src/retrieveCodeoutput/unpackaged/objects/Contact_Course__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Courses</relationshipLabel>
        <relationshipName>Contact_Courses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Contact Courses</relationshipLabel>
        <relationshipName>Contact_Courses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Contact Course</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Contact_Courses</fullName>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>Contact__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Contact-Courses</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Contact Course Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>